Problem not yet solve, Collapse coin

--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ body {
 	margin-bottom: 50px;
 }
 
+
 .coin .container {
 	background-color: white;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
@@ -458,4 +459,12 @@ body {
 		padding: 12px 32px;
 		font-weight: 500;
 	}
+
+	.ethereum:hover, .litecoin:hover {
+		background-color: purple;
+		color: white;
+	}
+
 }
+
+
